@@ -31,7 +31,8 @@ WIDGET_SOURCES = \
 	$(SRC)/Widget/QuestionWidget.cpp \
 	$(SRC)/Widget/KeyboardWidget.cpp \
 	$(SRC)/Widget/ViewImageWidget.cpp \
-	$(SRC)/Widget/MultiSelectListWidget.cpp
+	$(SRC)/Widget/MultiSelectListWidget.cpp \
+	$(SRC)/Widget/FileMultiSelectWidget.cpp
 
 WIDGET_DEPENDS = SCREEN
 
